--- a/eliza/index.html
+++ b/eliza/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <h1>Welcome to ELIZA</h1>
+        <h1>ELIZA Chatbot</h1>
         <div id="chat-history" class="chat-history"></div>
         <input type="text" id="user-input" placeholder="Type your message here..." />
         <button onclick="sendMessage()">Send</button>
