--- a/eliza/index.html
+++ b/eliza/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="chat-container">
-        <h1>ELIZA Chatbot</h1>
+        <div class="header">ELIZA Chatbot</div>
         <div id="chat-history" class="chat-history"></div>
-        <input type="text" id="user-input" placeholder="Type your message here..." />
-        <button onclick="sendMessage()">Send</button>
+        <div class="input-container">
+            <input type="text" id="user-input" placeholder="Type your message here..." autofocus>
+            <button onclick="sendMessage()">Send</button>
+        </div>
     </div>
     <script src="eliza.js"></script>
 </body>
