--- a/eliza/index.html
+++ b/eliza/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELIZA Chatbot</title>
+    <title>ELIZA Chatbot</title> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="chat-container">
-        <div class="header">ELIZA Chatbot</div>
-        <div id="chat-history" class="chat-history"></div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type your message here..." autofocus>
+        <div class="header">ELIZA Chatbot</div>     
+        <!-- Chat history will be here -->
+        <div id="chat-history" class="chat-history"></div>     
+        <!-- Contains both input box and send button -->
+        <div class="input-container">        
+            <!-- Input users text -->
+            <input type="text" id="user-input" placeholder="Type your message here..." autofocus>         
+            <!-- Button for user message to be sent with sendMessage funtion being activated in eliza.js -->
             <button onclick="sendMessage()">Send</button>
         </div>
     </div>
